--- a/index.html
+++ b/index.html
@@ -18,15 +18,25 @@
     <div>
         <h1>Age Calculator</h1>
     </div>
-    <label for="input">Enter your date of birth </label>
-    <input type="number" id="date" placeholder="date">
-    <input type="number" id="month" placeholder="month">
-    <input type="number" id="year" placeholder="year">
+        <form class="myform">
+            <label for="input">Enter Date of Birth and Gender </label>
+            <input type="number" id="date" placeholder="date">
+            <input type="number" id="month" placeholder="month">
+            <input type="number" id="year" placeholder="year">
+            <!-- Checkbox to select gender-->
+            <select name="gender" id="gender">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+
+            </select>
+        </form>
+
 
     <button id="calc-btn">Calculate Age</button>
-
+    <!--Javascript paragraph to push the documentWrite function to the html page-->
     <p id="show-age"></p>
 
+    <!--Javascript running the above code -->
     <script src="script/script.js"></script>
 </body>
 
