--- a/index.html
+++ b/index.html
@@ -17,19 +17,23 @@
 <body>
     <div>
         <h1>Age Calculator</h1>
+        <h2></h2>
     </div>
-        <form class="myform">
-            <label for="input">Enter Date of Birth and Gender </label>
-            <input type="number" id="date" placeholder="date">
-            <input type="number" id="month" placeholder="month">
-            <input type="number" id="year" placeholder="year">
+        
+            <label for="input">Enter your birth Date </label>
+                <input type="number" id="date" placeholder="date">
+            <label for="input">Enter your birth Month </label>
+                <input type="number" id="month" placeholder="month">
+            <label for="input">Enter your birth Year </label>
+                <input type="number" id="year" placeholder="year">
             <!-- Checkbox to select gender-->
+            <label for="input">Select your Gender </label>
             <select name="gender" id="gender">
                 <option value="male">Male</option>
                 <option value="female">Female</option>
 
             </select>
-        </form>
+        
 
 
     <button id="calc-btn">Calculate Age</button>
