akram name function deployment

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
                 <input type="number" id="month" placeholder="month">
             <label for="input">Enter your birth Year </label>
                 <input type="number" id="year" placeholder="year">
+            <label for="input">On which Day were you Born </label>
+            <select name="week" id="week">
+                <option value="sunday">sunday</option>
+                <option value="monday">monday</option>
+                <option value="tuesday">tuesday</option>
+                <option value="wednesday">wednesday</option>
+                <option value="thursday">thursday</option>
+                <option value="friday">friday</option>
+                <option value="saturday">saturday</option>
+            
+            </select>
             <!-- Checkbox to select gender-->
             <label for="input">Select your Gender </label>
             <select name="gender" id="gender">
