--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
                                 <div class= "chei-form">
                                         <div class="form-group">
                                             <label for="input">Enter your birth Date </label>
-                                                <input type="number" id="date" placeholder="date">
+                                                <input type="number" id="date" placeholder="date" min=1 max=31 maxlength=2>
                                         </div>
                                         <div class="form-group">
                                             <label for="input">Enter your birth Month </label>
-                                                <input type="number" id="month" placeholder="month">
+                                                <input type="number" id="month" placeholder="month" min=1 max=12 maxlength=2>
                                         </div>
                                         <div class="form-group">
                                             <label for="input">Enter your birth Year </label>
                                         
-                                                <input type="number" id="year" placeholder="year">
+                                                <input type="number" id="year" placeholder="year"min=1800 max=2020 maxlenght=4 minlength=4>
                                         </div>
                                         <div class="form-group">
                                         
