--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
 
             
             </div>
-          <div class="col-md-3 col-sm-6" > 
-                        <!--Javascript paragraph to push the documentWrite function to the html page-->
-                        <p>The results will display here</p>
-                        <p id="displayAge"></p>
-                        <p id= "displayAkram"></p>
-                        <p id = "displayWeek" ></p>
-            </div>
+                            <div class="col-md-3 col-sm-6" > 
+                                        <!--Javascript paragraph to push the documentWrite function to the html page-->
+                                        <p><b>The results will display here</b></p>
+                                        <p id="displayAge"></p>
+                                        <p id= "displayAkram"></p>
+                                        <p id = "displayWeek" ></p>
+                            </div>
     </div>
 
     <!--Javascript running the above code below page to improve under body tag to allow page to finish loading-->
