--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="col-md-4 col-sm-6">
                     <h3>Enter Below Details</h3>
                         <div class="form">
-
+                            <form class = "akramForm">
                                 <div class= "chei-form">
                                         <div class="form-group">
                                             <label for="input">Enter your birth Date </label>
@@ -116,6 +116,7 @@
                                         </div>
                                         <button id="buttonCalc" class="button" type="submit">Calculate Age</button>
                                 </div>
+                            </form>
                 </div>
 
             
@@ -131,6 +132,9 @@
 
     <!--Javascript running the above code below page to improve under body tag to allow page to finish loading-->
     <script src="script/script.js"></script>
+    <div class="card-footer">
+        <p>Age Calculator</p>
+    </div>
 </body>
 
 </html>
