--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/bootstrap.css" >
-    <link rel="stylesheet" href="style/style.css" >
+    <link rel="stylesheet" href="style/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="style/style.css" type="text/css">
     <title>nariksochege Age Calculator</title>
 </head>
 
